--- a/profileservice/src/main/resources/application.properties
+++ b/profileservice/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.liquibase.enabled=true
 spring.liquibase.user=root
 spring.liquibase.password=dungbadao2002
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+
+kafka.bootstrap.servers=localhost:9092
+spring.kafka.producer.retries=3
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+payment.kafka.consumer-group-id=profileService-groupId
